cmake_minimum_required(VERSION 2.6)

option( CRABNET_SAMPLE_AutopatcherClient "" True )
#option( CRABNET_SAMPLE_AutopatcherClientGFx3_0 "" True )
option( CRABNET_SAMPLE_AutopatcherClientRestarter "" True )
option( CRABNET_SAMPLE_AutopatcherServer "" True )
option( CRABNET_SAMPLE_AutoPatcherServer_MySQL "" True )
option( CRABNET_SAMPLE_BigPacketTest "" True )
option( CRABNET_SAMPLE_BurstTest "" True )
option( CRABNET_SAMPLE_Chat_Example "" True )
option( CRABNET_SAMPLE_CloudClient "" True )
option( CRABNET_SAMPLE_CloudServer "" True )
option( CRABNET_SAMPLE_CloudTest "" True )
option( CRABNET_SAMPLE_CommandConsoleClient "" True )
option( CRABNET_SAMPLE_CommandConsoleServer "" True )
option( CRABNET_SAMPLE_ComprehensivePCGame "" True )
option( CRABNET_SAMPLE_ComprehensiveTest "" True )
#option( CRABNET_SAMPLE_CrashRelauncher "" True )
option( CRABNET_SAMPLE_CrashReporter "" True )
option( CRABNET_SAMPLE_CrossConnectionTest "" True )
option( CRABNET_SAMPLE_DirectoryDeltaTransfer "" True )
option( CRABNET_SAMPLE_Dropped_Connection_Test "" True )
option( CRABNET_SAMPLE_Encryption "" True )
option( CRABNET_SAMPLE_FCMHost "" True )
option( CRABNET_SAMPLE_FCMHostSimultaneous "" True )
option( CRABNET_SAMPLE_FCMVerifiedJoinSimultaneous "" True )
option( CRABNET_SAMPLE_FileListTransfer "" True )
option( CRABNET_SAMPLE_Flow_Control_Test "" True )
option( CRABNET_SAMPLE_Fully_Connected_Mesh "" True )
#option( CRABNET_SAMPLE_GFWL "" True )
#option( CRABNET_SAMPLE_iOS "" True )
option( CRABNET_SAMPLE_LANServerDiscovery "" True )
option( CRABNET_SAMPLE_Lobby2Client "" True )
#option( CRABNET_SAMPLE_Lobby2ClientGFx3_0 "" True )
#option( CRABNET_SAMPLE_Lobby2Client_PS3 "" True )
#option( CRABNET_SAMPLE_Lobby2Server_PGSQL "" True )
#option( CRABNET_SAMPLE_LobbyDB_PostgreSQL "" True )
#option( CRABNET_SAMPLE_LoopbackPerformanceTest "" True )
#option( CRABNET_SAMPLE_Marmalade "" True )
option( CRABNET_SAMPLE_MasterServer "" True )
option( CRABNET_SAMPLE_MessageFilter "" True )
option( CRABNET_SAMPLE_MessageSizeTest "" True )
option( CRABNET_SAMPLE_NATCompleteClient "" True )
option( CRABNET_SAMPLE_NATCompleteServer "" True )
option( CRABNET_SAMPLE_OfflineMessagesTest "" True )
option( CRABNET_SAMPLE_PacketLogger "" True )
option( CRABNET_SAMPLE_PHPDirectoryServer2 "" True )
option( CRABNET_SAMPLE_Ping "" True )
#option( CRABNET_SAMPLE_PS3 "" True )
option( CRABNET_SAMPLE_RackspaceConsole "" True )
option( CRABNET_SAMPLE_RakVoice "" True )
option( CRABNET_SAMPLE_RakVoiceDSound "" True )
option( CRABNET_SAMPLE_RakVoiceFMOD "" True )
#option( CRABNET_SAMPLE_RakVoiceFMODAsDLL "" True )
#option( CRABNET_SAMPLE_RankingServerDB "" True )
#option( CRABNET_SAMPLE_RankingServerDBTest "" True )
#option( CRABNET_SAMPLE_ReadyEvent "" True )
option( CRABNET_SAMPLE_Reliable_Ordered_Test "" True )
option( CRABNET_SAMPLE_ReplicaManager3 "" True )
#option( CRABNET_SAMPLE_Rooms "" True )
#option( CRABNET_SAMPLE_RoomsBrowserGFx3 "" True )
option( CRABNET_SAMPLE_Router2 "" True )
option( CRABNET_SAMPLE_RPC3 "" True )
option( CRABNET_SAMPLE_RPC4 "" True )
option( CRABNET_SAMPLE_SendEmail "" True )
option( CRABNET_SAMPLE_ServerClientTest2 "" True )
option( CRABNET_SAMPLE_StatisticsHistoryTest "" True )
#option( CRABNET_SAMPLE_SteamLobby "" True )
option( CRABNET_SAMPLE_TeamManager "" True )
option( CRABNET_SAMPLE_TestDLL "" True )
option( CRABNET_SAMPLE_Tests "" True )
option( CRABNET_SAMPLE_ThreadTest "" True )
option( CRABNET_SAMPLE_Timestamping "" True )
option( CRABNET_SAMPLE_TitleValidationDB_PostgreSQL "" True )
option( CRABNET_SAMPLE_TwoWayAuthentication "" True )
option( CRABNET_SAMPLE_UDPForwarder "" True )
#option( CRABNET_SAMPLE_Vita "" True )
#option( CRABNET_SAMPLE_XBOX360 "" True )

if(CRABNET_SAMPLE_AutopatcherClient)
	add_subdirectory("AutopatcherClient")
endif()
if(CRABNET_SAMPLE_AutopatcherClientGFx3_0)
	#add_subdirectory("AutopatcherClientGFx3.0")
endif()
if(CRABNET_SAMPLE_AutopatcherClientRestarter)
	add_subdirectory("AutopatcherClientRestarter")
endif()
if(CRABNET_SAMPLE_AutopatcherServer)
	add_subdirectory("AutopatcherServer")
endif()
if(CRABNET_SAMPLE_AutoPatcherServer_MySQL)
	add_subdirectory("AutoPatcherServer_MySQL")
endif()
if(CRABNET_SAMPLE_BigPacketTest)
	add_subdirectory("BigPacketTest")
endif()
if(CRABNET_SAMPLE_BurstTest)
	add_subdirectory("BurstTest")
endif()
if(CRABNET_SAMPLE_Chat_Example)
	add_subdirectory("Chat Example")
endif()
if(CRABNET_SAMPLE_CloudClient)
	add_subdirectory("CloudClient")
endif()
if(CRABNET_SAMPLE_CloudServer)
	add_subdirectory("CloudServer")
endif()
if(CRABNET_SAMPLE_CloudTest)
	add_subdirectory("CloudTest")
endif()
if(CRABNET_SAMPLE_CommandConsoleClient)
	add_subdirectory("CommandConsoleClient")
endif()
if(CRABNET_SAMPLE_CommandConsoleServer)
	add_subdirectory("CommandConsoleServer")
endif()
if(CRABNET_SAMPLE_ComprehensivePCGame)
	add_subdirectory("ComprehensivePCGame")
endif()
if(CRABNET_SAMPLE_ComprehensiveTest)
	add_subdirectory("ComprehensiveTest")
endif()
if(CRABNET_SAMPLE_CrashRelauncher)
	#add_subdirectory("CrashRelauncher")
endif()
if(CRABNET_SAMPLE_CrashReporter)
	add_subdirectory("CrashReporter")
endif()
if(CRABNET_SAMPLE_CrossConnectionTest)
	add_subdirectory("CrossConnectionTest")
endif()
if(CRABNET_SAMPLE_DirectoryDeltaTransfer)
	add_subdirectory("DirectoryDeltaTransfer")
endif()
if(CRABNET_SAMPLE_Dropped_Connection_Test)
	add_subdirectory("Dropped Connection Test")
endif()
if(CRABNET_SAMPLE_Encryption)
	add_subdirectory("Encryption")
endif()
if(CRABNET_SAMPLE_FCMHost)
	add_subdirectory("FCMHost")
endif()
if(CRABNET_SAMPLE_FCMHostSimultaneous)
	add_subdirectory("FCMHostSimultaneous")
endif()
if(CRABNET_SAMPLE_FCMVerifiedJoinSimultaneous)
	add_subdirectory("FCMVerifiedJoinSimultaneous")
endif()
if(CRABNET_SAMPLE_FileListTransfer)
	add_subdirectory("FileListTransfer")
endif()
if(CRABNET_SAMPLE_Flow_Control_Test)
	add_subdirectory("Flow Control Test")
endif()
if(CRABNET_SAMPLE_Fully_Connected_Mesh)
	add_subdirectory("FullyConnectedMesh")
endif()
if(CRABNET_SAMPLE_GFWL)
	#add_subdirectory("GFWL")
endif()
if(CRABNET_SAMPLE_iOS)
	#add_subdirectory("iOS")
endif()
if(CRABNET_SAMPLE_LANServerDiscovery)
	add_subdirectory("LANServerDiscovery")
endif()
if(CRABNET_SAMPLE_Lobby2Client)
	add_subdirectory("Lobby2Client")
endif()
if(CRABNET_SAMPLE_Lobby2ClientGFx3_0)
	#add_subdirectory("Lobby2ClientGFx3.0")
endif()
if(CRABNET_SAMPLE_Lobby2Client_PS3)
	#add_subdirectory("Lobby2Client_PS3")
endif()
if(CRABNET_SAMPLE_Lobby2Server_PGSQL)
	#add_subdirectory("Lobby2Server_PGSQL")
endif()
if(CRABNET_SAMPLE_LobbyDB_PostgreSQL)
	#add_subdirectory("LobbyDB_PostgreSQL")
endif()
if(CRABNET_SAMPLE_LoopbackPerformanceTest)
	#add_subdirectory("LoopbackPerformanceTest")
endif()
if(CRABNET_SAMPLE_Marmalade)
	#add_subdirectory("Marmalade")
endif()
if(CRABNET_SAMPLE_MasterServer)
	add_subdirectory("MasterServer")
endif()
if(CRABNET_SAMPLE_MessageFilter)
	add_subdirectory("MessageFilter")
endif()
if(CRABNET_SAMPLE_MessageSizeTest)
	add_subdirectory("MessageSizeTest")
endif()
if(CRABNET_SAMPLE_NATCompleteClient)
	add_subdirectory("NATCompleteClient")
endif()
if(CRABNET_SAMPLE_NATCompleteServer)
	add_subdirectory("NATCompleteServer")
endif()
if(CRABNET_SAMPLE_OfflineMessagesTest)
	add_subdirectory("OfflineMessagesTest")
endif()
if(CRABNET_SAMPLE_PacketLogger)
	add_subdirectory("PacketLogger")
endif()
if(CRABNET_SAMPLE_PHPDirectoryServer2)
	add_subdirectory("PHPDirectoryServer2")
endif()
if(CRABNET_SAMPLE_Ping)
	add_subdirectory("Ping")
endif()
if(CRABNET_SAMPLE_PS3)
	#add_subdirectory("PS3")
endif()
if(CRABNET_SAMPLE_RackspaceConsole)
	add_subdirectory("RackspaceConsole")
endif()
if(CRABNET_SAMPLE_RakVoice)
	add_subdirectory("RakVoice")
endif()
if(CRABNET_SAMPLE_RakVoiceDSound)
	add_subdirectory("RakVoiceDSound")
endif()
if(CRABNET_SAMPLE_RakVoiceFMOD)
	add_subdirectory("RakVoiceFMOD")
endif()
if(CRABNET_SAMPLE_RakVoiceFMODAsDLL)
	#add_subdirectory("RakVoiceFMODAsDLL")
endif()
if(CRABNET_SAMPLE_RankingServerDB)
	#add_subdirectory("RankingServerDB")
endif()
if(CRABNET_SAMPLE_RankingServerDBTest)
	#add_subdirectory("RankingServerDBTest")
endif()
if(CRABNET_SAMPLE_ReadyEvent)
	#add_subdirectory("ReadyEvent")
endif()
if(CRABNET_SAMPLE_Reliable_Ordered_Test)
	add_subdirectory("Reliable Ordered Test")
endif()
if(CRABNET_SAMPLE_ReplicaManager3)
	add_subdirectory("ReplicaManager3")
endif()
if(CRABNET_SAMPLE_Rooms)
	#add_subdirectory("Rooms")
endif()
if(CRABNET_SAMPLE_RoomsBrowserGFx3)
	#add_subdirectory("RoomsBrowserGFx3")
endif()
if(CRABNET_SAMPLE_Router2)
	add_subdirectory("Router2")
endif()
if(CRABNET_SAMPLE_RPC3)
	add_subdirectory("RPC3")
endif()
if(CRABNET_SAMPLE_RPC4)
	add_subdirectory("RPC4")
endif()
if(CRABNET_SAMPLE_SendEmail)
	add_subdirectory("SendEmail")
endif()
if(CRABNET_SAMPLE_ServerClientTest2)
	add_subdirectory("ServerClientTest2")
endif()
if(CRABNET_SAMPLE_StatisticsHistoryTest)
	add_subdirectory("StatisticsHistoryTest")
endif()
if(CRABNET_SAMPLE_SteamLobby)
	#add_subdirectory("SteamLobby")
endif()
if(CRABNET_SAMPLE_TeamManager)
	add_subdirectory("TeamManager")
endif()
if(CRABNET_SAMPLE_TestDLL)
	add_subdirectory("TestDLL")
endif()
if(CRABNET_SAMPLE_Tests)
	add_subdirectory("Tests")
endif()
if(CRABNET_SAMPLE_ThreadTest)
	add_subdirectory("ThreadTest")
endif()
if(CRABNET_SAMPLE_Timestamping)
	add_subdirectory("Timestamping")
endif()
if(CRABNET_SAMPLE_TitleValidationDB_PostgreSQL)
	add_subdirectory("TitleValidationDB_PostgreSQL")
endif()
if(CRABNET_SAMPLE_TwoWayAuthentication)
	add_subdirectory("TwoWayAuthentication")
endif()
if(CRABNET_SAMPLE_UDPForwarder)
	add_subdirectory("UDPForwarder")
endif()
if(CRABNET_SAMPLE_Vita)
	#add_subdirectory("Vita")
endif()
if(CRABNET_SAMPLE_XBOX360)
	#add_subdirectory("XBOX360")
endif()
